# led-sectional-rust

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md  cfg.toml.example
crates/led-sectional-core/: Cargo.toml
crates/led-sectional-core/src/: config.rs  error.rs  led.rs  lib.rs  metar.rs
docs/: DEVELOPMENT.md  HARDWARE.md  QUICKSTART.md  mvp.md
firmware/: Cargo.toml  sdkconfig.defaults
firmware/.cargo/: config.toml
firmware/src/: led_driver.rs  main.rs  metar_client.rs  provisioning.rs  wifi.rs
