[package]
name = "led-sectional-core"
version = "0.1.0"
edition = "2021"
description = "Core logic for LED sectional aviation weather display"
license = "MIT"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
